fix UI issues; add support for native-image